# exercises

./: LICENSE
.github/workflows/: cmake-single-platform.yml
cpp/qt_app_simple_sound_ctl_demo/: .clang-format  .gitignore  CMakeLists.txt  build.sh  run.sh
cpp/qt_app_simple_sound_ctl_demo/docs/: README.md
cpp/qt_app_simple_sound_ctl_demo/include/: media_ctl.h  media_ctl_dbus.h
cpp/qt_app_simple_sound_ctl_demo/qml/: MediaButton.qml  MediaSystemTray.qml  main.qml
cpp/qt_app_simple_sound_ctl_demo/src/: main.cpp  media_ctl.cpp  media_ctl_dbus.cpp
